--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@types/react-dom": "^18.0.10",
     "@vitejs/plugin-react": "^3.1.0",
     "concurrently": "^8.0.1",
+    "eslint-plugin-import": "^2.27.5",
     "typescript": "^5.0.2",
     "vite": "^4.1.0"
   }
