--- a/functions/package.json
+++ b/functions/package.json
@@ -16,7 +16,8 @@
   "main": "lib/index.js",
   "dependencies": {
     "firebase-admin": "^11.5.0",
-    "firebase-functions": "^4.2.0"
+    "firebase-functions": "^4.2.0",
+    "nodemailer": "^6.9.1"
   },
   "devDependencies": {
     "@types/nodemailer": "^6.4.7",
