--- a/email-sender-function/package.json
+++ b/email-sender-function/package.json
@@ -1,7 +1,6 @@
 {
   "name": "functions",
   "scripts": {
-    "lint": "eslint --ext .js,.ts .",
     "build": "tsc",
     "build:watch": "tsc --watch",
     "serve": "npm run build && firebase emulators:start --only functions",
@@ -20,12 +19,7 @@
     "nodemailer": "^6.9.1"
   },
   "devDependencies": {
-    "@types/nodemailer": "^6.4.7",
-    "@typescript-eslint/eslint-plugin": "^5.12.0",
-    "@typescript-eslint/parser": "^5.12.0",
-    "eslint": "^8.38.0",
-    "eslint-config-google": "^0.14.0",
-    "eslint-plugin-import": "^2.27.5",
+    "dotenv": "^16.0.3",
     "firebase-functions-test": "^3.0.0",
     "typescript": "^4.9.0"
   },
