--- a/firebase.json
+++ b/firebase.json
@@ -10,13 +10,17 @@
       {
         "source": "**",
         "destination": "/index.html"
+      },
+      {
+        "source":"/formFunction",
+        "function": "formFunction"
       }
     ]
   },
   "functions": [
     {
-      "source": "functions",
-      "codebase": "default",
+      "source": "email-sender-function",
+      "codebase": "email-sender-function",
       "ignore": [
         "node_modules",
         ".git",
@@ -24,7 +28,6 @@
         "firebase-debug.*.log"
       ],
       "predeploy": [
-        "npm --prefix \"$RESOURCE_DIR\" run lint",
         "npm --prefix \"$RESOURCE_DIR\" run build"
       ]
     }
