--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "deploy": "firebase deploy"
   },
   "dependencies": {
+    "@google-cloud/storage": "^6.9.5",
     "firebase": "^9.19.1",
     "firebase-admin": "^11.6.0",
+    "firebase-functions": "^4.3.1",
     "nodemailer": "^6.9.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
