--- a/firebase.json
+++ b/firebase.json
@@ -8,7 +8,7 @@
         "destination": "/index.html"
       },
       {
-        "source": "./functions",
+        "source": "./functions/src/index.ts",
         "function": "formFunction"
       }
     ]
