--- a/functions/package.json
+++ b/functions/package.json
@@ -15,8 +15,9 @@
   "main": "lib/index.js",
   "dependencies": {
     "@google-cloud/storage": "^6.9.5",
+    "dotenv": "^16.1.4",
     "firebase-admin": "^11.5.0",
-    "firebase-functions": "^4.2.0",
+    "firebase-functions": "^4.4.1",
     "nodemailer": "^6.9.1"
   },
   "devDependencies": {
